taa-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taa
  namespace: taa
  labels:
    app: nginx
spec:
  replicas: 4
  selector:
    matchLabels:
      app: taa
  template:
    metadata:
      namespace: taa
      labels:
        app: taa
    spec:
      imagePullSecrets:
      - name: dockerhubcred
      nodeSelector:
        app: taa
      containers:
      - name: taa-php
        image: vietchita/php-web:latest
        resources:
          limits:
            memory: 512Mi
            cpu: "0.5"
          requests:
            memory: 256Mi
            cpu: "0.2"
        # command: ["/bin/sh", "-c", "'source /config/taa-env'"]
        ports:
        - containerPort: 9000
      - name: taa-nginx
        image: vietchita/mynew-nginx:latest
        ports:
        - containerPort: 80
